Fix: process card overflow hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,7 @@ footer {
 .process-card {
   padding: 1rem;
   border-radius: var(--border-radius);
+  overflow: hidden;
 
   display: table;
   width: 100%;
